/* ServiceInstance.proto: describes a Service Instance of a module
 *
 * Author: J. Lowell Wofford <lowell@lanl.gov>
 *
 * This software is open source software available under the BSD-3 license.
 * Copyright (c) 2018, Triad National Security, LLC
 * See LICENSE file for details.
 */

syntax = "proto3";
package proto;

import "google/protobuf/any.proto";

message ServiceInstance {
    string id = 1;   // this needs to be unique
    string module = 2; // this is potentially non-unique
    enum ServiceState {
        UNKNOWN = 0;
        INIT    = 1;
        STOP    = 2;
        RUN     = 3;
        ERROR   = 4;
    }
    ServiceState state = 3;
    google.protobuf.Any config = 4;
    string error_msg = 5;
}